Added Functional Create Dataset Interface